package Iterateur.Collection;

public interface Iterable {
	Iterateur createIterator();
}
