package Iterateur.Collection;

public interface Iterateur {
	boolean hasNext();
	Object next();
}
